feat: increase terrain area to 10km² for more variation

--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                 wavetable: {
                     samplesPerWaveform: 256,
                     numberOfFrames: 32,
-                    gridSizeKm: 1.0,
+                    gridSizeKm: 10.0, // 10km² for more terrain variation
                 },
                 audio: {
                     polyphony: 8,
